Ignore best_model.h5 (file too large)

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 preprocessed_dataset//isic_2019
 /preprocessed_images
 preprocessed_dataset/
+model_training/best_model.h5
 /testing_preprocessed_images
 /old_preprocessed_images
 /augmented_images
