--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 # stage .keras model
 # git lfs ls-files if it shows up then we good
 *.keras filter=lfs diff=lfs merge=lfs -text
+.keras filter=lfs diff=lfs merge=lfs -text
