delete csv file

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ ISIC_2019_Test_Input/*
 working/
 ISIC_2019_Training_GroundTruth.csv
 ISIC_2019_Test_GroundTruth.csv
+ISIC_2019_Training_Metadata.csv
