--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
-*.keras filter=lfs diff=lfs merge=lfs -text
-.keras filter=lfs diff=lfs merge=lfs -text
+*.txt text
+*.html text
+*.css text
+*.js text
